refactor: ConfigurationLocation ConfigurationSource dependency removed
Refs: XRDDEV-2534